syntax = "proto3";
package service.definition;

option go_package = "vegimarket.com/serviceDefinition";

service VegiMarket {
  rpc GetVegetableNames (GetVegetableNamesRequest) returns (GetVegetableNamesResponse) {}
  rpc GetPricePerUnit (GetPricePerUnitRequest) returns (GetPricePerUnitResponse) {}
  rpc GetAmount (GetAmountRequest) returns (GetAmountResponse) {}
  rpc AddVegetable (VegetableInfo) returns (AddUpdateVegetableResponse) {}
  rpc UpdateVegetable (VegetableInfo) returns (AddUpdateVegetableResponse) {}
}

message GetVegetableNamesRequest {
}

message GetVegetableNamesResponse {
  repeated string name = 1;
}

message VegetableInfo {
  string name = 1;
  float price = 2;
  float amount = 3;
}

message Inventory {
  map<string, VegetableInfo> vegiEntry = 1;
}

message GetPricePerUnitRequest {
  string name = 1;
}

message GetPricePerUnitResponse {
  float price = 1;
}

message GetAmountRequest {
  string name = 1;
}

message GetAmountResponse {
  float amount = 1;
}

message AddUpdateVegetableResponse {
  string message = 1;
}
